# community-code

./: Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/migrations/2021-11-24-200303_create_tables/: down.sql
backend/src/: gh.rs  lib.rs  main.rs  models.rs  schema.rs
migrations/2021-11-24-173332_create_posts/: up.sql
migrations/2021-11-24-190330_create_user/: up.sql
migrations/2021-11-24-191002_create_challenge/: down.sql  up.sql
migrations/2021-11-24-191635_create_file/: up.sql
migrations/2021-11-24-191909_create_submission/: down.sql  up.sql
migrations/2021-11-24-200303_create_tables/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
